# drf-deployment

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml
phoneAPI_project/: asgi.py  settings.py  urls.py  wsgi.py
phones/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
phones/migrations/: 0001_initial.py  0002_auto_20210725_1340.py
